refactor: L15 mark solution as wrong